[package]
name = "mm_file_formats"
authors.workspace = true
description = "Mad Max File Formats"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
mm_hashing.workspace = true

aligned-vec.workspace = true
binrw.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
modular-bitfield.workspace = true
num-traits.workspace = true
thiserror.workspace = true
