[package]
name = "adf_converter"
authors.workspace = true
description = "Mad Max ADF Converter"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
mm_file_formats.workspace = true
mm_hashing.workspace = true

anyhow.workspace = true
binrw.workspace = true
clap.workspace = true
quick-xml.workspace = true
serde.workspace = true
